# mcp_talk

./: .gitignore  PRESENTATION.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  token.json
..github/: copilot-instructions.md
tools/: gmail_reader.py  tools.py
