[project]
name = "mcp_talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "diagrams>=0.24.4",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.4",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "markdown>=3.8.2",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]
